--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,16 @@
 /node_modules/
 /public/phpmyadmin
 # END: merged in from laravel8 starter project
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+.env
+.env.backup
+.phpunit.result.cache
+docker-compose.override.yml
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
