--- a/starter.ini
+++ b/starter.ini
@@ -9,13 +9,13 @@
 
 [development]
 # Valid values: apache, php
-default_server=apache
+default_server=php
 
 [.editorconfig]
 # valid values are:
 # laravel-default: use the .editorconfig that comes with the laravel project scaffolding
-# laravel-js-2space: altered vesrion of laravel-default allowing for 2 space indents for most files. 
-#     --> see: bash/snippets/editorconfig/laravel-js-2space 
+# laravel-js-2space: altered vesrion of laravel-default allowing for 2 space indents for most files.
+#     --> see: bash/snippets/editorconfig/laravel-js-2space
 # none: delete .editorconfig. Do not enforce project wide editor settings.
 # Note: if left blank or set to an invalid value, laravel-default will be used
 type=laravel-js-2space
