--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,6 @@
 image:
   file: .gitpod.Dockerfile
-  
+
 ports:
   - port: 8001
     onOpen: ignore
@@ -16,6 +16,7 @@ tasks:
     init: |
       bash bash/init-gitpod.sh &&
       bash bash/init-optional-scaffolding.sh &&
+      bash bash/init-project.sh &&
       bash bash/init-complete.sh
     name: Startup
   - openMode: split-left
