--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -21,6 +21,10 @@ tasks:
     name: Startup
   - openMode: split-left
     command: |
+      INITED=$(bash bash/helpers.sh is_inited); \
+      if [ "$INITED" == 1 ]; then \
+        gp sync-done inited
+      fi;
       UP=$(pgrep mysql | wc -l); \
       if [ "$UP" -ne 1 ]; then \
         . bash/third-party/spinner.sh &&
@@ -34,7 +38,7 @@ tasks:
     name: Web Server
   - openMode: split-top
     command: |
-      default_server=$(bash bash/utils.sh parse_ini_value starter.ini development default_server); open_preview $default_server
+      gp await-sync inited && default_server=$(bash bash/utils.sh parse_ini_value starter.ini development default_server); open_preview $default_server
     name: Main Terminal
 
 vscode:
