--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -21,9 +21,8 @@ tasks:
     name: Startup
   - openMode: split-left
     command: |
-      INITED=$(bash bash/helpers.sh is_inited); \
-      if [ "$INITED" == 1 ]; then \
-        gp sync-done inited
+      if [ $(bash bash/helpers.sh is_inited) == 1 ]; then \
+        gp sync-done gitpod-inited
       fi;
       UP=$(pgrep mysql | wc -l); \
       if [ "$UP" -ne 1 ]; then \
@@ -38,7 +37,12 @@ tasks:
     name: Web Server
   - openMode: split-top
     command: |
-      gp sync-await inited && default_server=$(bash bash/utils.sh parse_ini_value starter.ini development default_server); open_preview $default_server
+      . bash/third-party/spinner.sh &&
+      start_spinner "Opening preview when system is ready..."
+      gp sync-await gitpod-inited &&
+      default_server=$(bash bash/utils.sh parse_ini_value starter.ini development default_server); \
+      open_preview $default_server &&
+      stop_spinner $?
     name: Main Terminal
 
 vscode:
